<resources>
    <string name="app_name">Professor+</string>
    <string name="app_name_plus1">"Professor+"\n</string>
    <string name="app_name_plus2"> \n\tis coming…</string>
    <string name="app_recognize">Recognizing</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">recent faces</string>
    <string name="compare_vs">V.S.</string>
    <string name="search_ing">Searching…</string>
    <string name="no_face">Hey~Come out!\nI Can\'t see your face!</string>
    <string name="no_recognize">Ops~\nI Can\'t recognize you!</string>
    <string name="no_face_tips">Face Missing.</string>
    <string name="add_tips">Take or choose your photos\nby pushing button + in the bottom right corner </string>
    <string name="compare_found_text_reddirect">Click me to read more information…</string>
    <string name="uploading">uploading…</string>
    <string name="photo_name"> name </string>
    <string name="loading">加载中…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_professor_img_hint">(请选择一张教授的图片)</string>
    <string name="name_title">姓名：</string>
    <string name="professor_name_hint">请输入教授的姓名</string>
    <string name="uni_title">学校：</string>
    <string name="professor_uni_edit_hint">请输入教授所在的院校</string>
    <string name="web_url_title">个人网址：</string>
    <string name="professor_web_page_edit_hint">请输入教授的个人网址</string>
    <string name="submit_btn_text">提\t\t\t\t交</string>
    <string name="name_test">李庆</string>
    <string name="university_title">学校：</string>
    <string name="university_test">西南财经大学</string>
    <string name="story_title">故事：</string>
    <string name="story_write_hint">请写下这种照片的故事（可忽略）</string>
    <string name="tag_title">标签：</string>
    <string name="create_time_title">创建时间：</string>
    <string name="create_time_test">2017年8月22日 17:24:33</string>
    <string name="story_test">那一年，在西南财经大学</string>
    <string name="no_favorite_hint">没有找到相关收藏</string>
    <string name="web_page_title">个人网页:</string>
</resources>
