<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cn.edu.swufe.fife.professor.activity.FavoriteViewerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/favorite_viewer_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="36dp"
            app:expandedTitleMarginEnd="48dp">

            <ImageView
                android:id="@+id/favorite_viewer_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/favorite_viewer_toolbar"
                app:layout_scrollFlags="scroll|enterAlways"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--android:descendantFocusability="blocksDescendants"-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/university_title" />

            <TextView
                android:id="@+id/favorite_viewer_uni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/university_test" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/story_title" />

            <TextView
                android:id="@+id/favorite_story_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="13sp"
                android:text="@string/story_test" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/tag_title" />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/favorite_tagGroup_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TagGroup"
                app:atg_isAppendMode="false"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/create_time_title" />

            <TextView
                android:id="@+id/favorite_createTime_viewer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:textSize="12sp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/create_time_test" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/web_page_title" />

            <FrameLayout
                android:id="@+id/favorite_viewer_web_fragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
