<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_compare_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/compare_origin_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/liqing"
            android:background="@color/colorTextOrIcon"
            android:contentDescription="" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:gravity="center"
            android:fontFamily="serif-monospace"
            android:text="@string/compare_vs"/>

        <ImageView
            android:id="@+id/compare_simi_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/liqing"
            android:visibility="visible"
            android:background="@color/colorTextOrIcon"
            android:contentDescription="" />

        <TextView
            android:id="@+id/simi_text_placeholder"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorNoFoundTextBackground"
            android:text="@string/no_face"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="14sp"
            android:textColor="@color/colorTextOrIcon"
            android:fontFamily="cursive" />

    </LinearLayout>

    <TextView
        android:id="@+id/compare_search_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/search_ing"
        android:gravity="center"
        android:textSize="14sp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/compare_no_found_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/search_ing"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/compare_success_result_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/compare_found_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/compare_found_university_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorDivider"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/compare_found_webpage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>